# Accrue

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: DeploymentAndDistributionGuide.md  ERD.md  PRD FINAL.md  Sitemap.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: schema.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: accounts.rs  auth.rs  categories.rs  data.rs  mod.rs  reports.rs  transactions.rs  transfers.rs
src-tauri/src/db/: mod.rs
src-tauri/src/logic/: balance.rs
src-tauri/src/models/: mod.rs
src/components/: AddAccountModal.tsx  AddTransactionModal.tsx  AddTransferModal.tsx  ConfirmModal.tsx  Layout.tsx
src/lib/: auth.ts  tauri.ts
src/pages/: AccountDetail.tsx  Accounts.tsx  Dashboard.tsx  MonthlyTrends.tsx  SpendingBreakdown.tsx  Transactions.tsx
src/pages/auth/: LockScreen.tsx  SetupWizard.tsx
src/pages/settings/: AccountsManagement.tsx  Categories.tsx  DataBackup.tsx  Security.tsx
src/types/: index.ts
